syntax = "proto3";

package ai.pipestream.repository.filesystem.upload;

option java_multiple_files = true;
option java_package = "ai.pipestream.repository.filesystem.upload";
option java_outer_classname = "NodeUploadProto";

import "google/protobuf/any.proto";
import "core/pipeline_core_types.proto";

enum UploadState {
  UPLOAD_STATE_UNSPECIFIED = 0;
  UPLOAD_STATE_PENDING = 1;
  UPLOAD_STATE_UPLOADING = 2;
  UPLOAD_STATE_COMPLETED = 3;
  UPLOAD_STATE_FAILED = 4;
  UPLOAD_STATE_CANCELLED = 5;
}

// ============================================
// REPOSITORY UPLOAD SERVICE
// Handles efficient storage of documents to S3/MinIO
// ============================================

service NodeUploadService {
  // Simplified unary upload for full PipeDoc
  // Accepts full payload (up to 2GB) and handles S3 upload internally
  rpc UploadPipeDoc(ai.pipestream.data.v1.PipeDoc) returns (UploadResponse);
  
  // Retrieve document by ID
  rpc GetDocument(GetDocumentRequest) returns (ai.pipestream.data.v1.PipeDoc);
}

message UploadResponse {
  bool success = 1;
  string document_id = 2;    // The ID assigned/used
  string s3_key = 3;         // Where it was stored
  string message = 4;
}

message GetDocumentRequest {
  string document_id = 1;
}
